--- a/examples/static_markers.html
+++ b/examples/static_markers.html
@@ -12,12 +12,10 @@
     $(document).ready(function(){
       var url = GMaps.staticMapURL({
         size: [610, 350],
-        lat: -12.043333,
-        lng: -77.028333,
+        lat: 19.3901942,
+        lng: -99.1541944,
         markers: [
-          {lat: -12.043333, lng: -77.028333},
-          {lat: -12.045333, lng: -77.034, size: 'small'},
-          {lat: -12.045633, lng: -77.022, color: 'blue'}
+          {lat: 19.3901942, lng: -99.154194, color: 'blue'}
         ]
       });
       $('<img/>').attr('src', url).appendTo('#map');
